[package]
name = "does-it-json"
version = "0.0.4"
authors = ["Adam H. Leventhal <ahl@oxide.computer>"]
edition = "2021"
license = "Apache-2.0"
description = "Compare serde serialization with the schemars JSON schema"
repository = "https://github.com/ahl/does-it-json"
readme = "README.md"

[dependencies]
regress = "0.6.0"
schemars = "0.8.12"
serde = "1.0.175"
serde_json = "1.0.104"
thiserror = "1.0.44"

[dev-dependencies]
expectorate = "1.0.7"
